kubernetes/back-end/epenal-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epenal-backend
spec:
  selector:
    matchLabels:
      app: epenal-backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: epenal-backend
        tier: backend
        track: stable
    spec:
      containers:
        - name: epenal-backend
          image: "mcruzt/epenal-backend:v.0.1"
          ports:
            - name: http
              containerPort: 8080
