kubernetes/back-end/epenal-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: epenal-backend
spec:
  selector:
    app: epenal-backend
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
