kubernetes/back-end/epenal-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: epenal.backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epenal-backend
                port:
                  number: 8080
